--- a/learning/package.json
+++ b/learning/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "cors": "^2.8.5",
     "learning": "file:",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
